[package]
name = "clustiflor"
version = "1.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "clustiflor-cli"
path = "src/main.rs"

[dependencies]
rand = "0.9.2"
ndarray = "0.16.1"
walkdir = "2.5.0"
terminal_size = "0.4.3"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3"